--- a/src/app/course-overview/course-overview.component.html
+++ b/src/app/course-overview/course-overview.component.html
@@ -4,8 +4,9 @@
       happy plate academy
     </div>
     <div class="navbar-right">
+      <a class="create pr-3" routerLink='/blog'>blog</a>
       <a class="create pr-3" routerLink='/editor'>editor</a>
-      <a class="create pr-3" routerLink='/create-lesson'>creeër les</a>      
+      <!-- <a class="create pr-3" routerLink='/create-lesson'>creeër les</a>       -->
     </div>    
   </div>
 </div>
@@ -19,8 +20,8 @@
         <h2 class="mt-0 mb-4">{{course.name}}</h2>
         <p class="course-item-description">{{course.descr}}</p>
         <div class="break my-4"></div>
-        <a *ngIf="course.status == 'active'" [routerLink]="['/course', course._id]" class="btn btn-info" style="color: white;">Bekijk cursus</a>
-        <a *ngIf="course.status != 'active'" [routerLink]="['/course', course._id]" class="btn btn-info disabled" style="color: white;" >Wordt verwacht</a>
+        <a *ngIf="course.status == 'published'" [routerLink]="['/course', course._id]" class="btn btn-info" style="color: white;">Bekijk cursus</a>
+        <a *ngIf="course.status != 'published'" [routerLink]="['/course', course._id]" class="btn btn-info disabled" style="color: white;" >Wordt verwacht</a>
         <strong class="text-info ml-2">Gratis!</strong>
       </div>
     </div>
