--- a/src/app/article/article.component.html
+++ b/src/app/article/article.component.html
@@ -1,3 +1,28 @@
-<p>
-  article works!
-</p>
+<blog-navbar></blog-navbar>
+<section class="container-fluid">
+  <div class="container">
+    <div class="row px-3 pt-5 pb-3">
+      <div class="col-12 p-0 m-0">
+        <h1 class="title">{{article?.name}}</h1>
+      </div>
+      <div class="col-12 p-0 m-0" style="font-size: 14px; color: #cacaca; letter-spacing: 1px;">
+        <div><span class="mr-3" style="text-transform: uppercase;">Door:</span><span style="text-transform: uppercase;">{{article?.contributor?.name}}</span></div>
+        <div><span class="mr-3" style="text-transform: uppercase;">Geschreven op:</span> <span style="text-transform: uppercase;">{{article?.created_str}}</span></div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-12 col-md-8">
+        <div class="article-carousel" [style.background-image]="'url(' + article?.files[0]?.source + ')'"></div>
+      </div>
+      <div class="col-12 col-md-8 article-content-description mt-3">
+        <p class="subtitle">{{article?.description}}</p>
+      </div>            
+    </div>
+    <div class="row">
+      <div class="col-12 col-md-8 article-content-text">
+        <div #el [innerHtml]="article?.body"></div>        
+      </div>
+    </div>
+  </div>
+</section>
+<blog-footer></blog-footer>
