--- a/src/app/blog-footer/blog-footer.component.html
+++ b/src/app/blog-footer/blog-footer.component.html
@@ -7,8 +7,11 @@
           <li style="padding: 0; margin: 0;">
             FAQ
           </li>
-          <li>contacteer ons</li>
-          <li>feedback</li>
+          <li>Contacteer ons</li>
+          <li>Feedback</li>
+          <li>Advertise</li>
+          <li>Privacy policy</li>
+          <li>Press</li>
           <li routerLink="/create_recipe"><i class="fas fa-carrot"></i></li>
         </ul>
       </div>
