--- a/src/app/blog-navbar/blog-navbar.component.css
+++ b/src/app/blog-navbar/blog-navbar.component.css
@@ -15,6 +15,7 @@
 
 .header-container, .upper-menu-container{
     border-bottom: 1px solid rgba(0, 0, 0, .175);
+    transition: all 0.2s;
 }
 
 .row{
@@ -116,3 +117,11 @@ a{
     font-weight: 300;
     color: #666;
 }
+
+.sticky {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 2000;
+  }
+  
