--- a/src/app/blog/blog.component.css
+++ b/src/app/blog/blog.component.css
@@ -13,107 +13,6 @@
     padding: 1rem;    
 }
 
-/* .header-container, .upper-menu-container{
-    border-bottom: 1px solid rgba(0, 0, 0, .175);
-}
-
-.row{
-    padding: .5rem 1rem;
-    margin: 0;
-}
-
-.header-brand-container{
-
-}
-
-.header-brand-container, .header-content{
-    display: inline-block;
-}
-
-.header-content{
-    float: right;
-}
-
-@media only screen
-and (max-width: 812px)
-and (orientation: portrait){
-    .row{
-        padding: 0;
-        text-align: center!important;
-    }
-
-    .header-content{
-        display: none;
-    }
-}
-
-
-.header-brand-container-logo{
-    color: orangered;
-    font-weight: 700;
-    white-space: normal;
-    font-family: 'Comfortaa', sans-serif;
-    font-size: 1.5rem;
-}
-
-.header-content-getstarted{
-    font-size: 18px;
-    margin: 0px 10px 0px 0px;
-}
-
-.cta{
-    position: relative;
-    height: 42px;
-    border-radius: 3px;
-    box-shadow: 0 4px 6px 0 rgba(50,50,93,.11), 1px 1px 3px 0 rgba(0,0,0,.08);
-    transition: .2s;
-    font-weight: 700;
-    text-align: center;
-    font-size: 12px;
-    letter-spacing: 1px;
-    text-transform: uppercase;
-    color: #222;
-    text-decoration: none;
-    padding: 13px 24px 13px 25px;
-}
-
-.getstarted-cta{
-    background-color: #06d79c;
-    color: #fff;
-}
-
-a{
-    cursor: pointer;
-    text-decoration: none;      
-}
-
-.upper-menu{
-    font-size: 12px;
-    position: inherit;
-}
-
-.upper-menu-list{
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
-    margin: 0 32px;
-    list-style: none;
-}
-
-.upper-menu-list-item{
-    text-transform: capitalize;
-    text-align: center;
-    display: inline-block;
-}
-
-.upper-menu-list-item a{
-    padding: 17px 0 10px 0;
-    width: auto;
-    font-size: 18px;
-    font-weight: 300;
-    color: #666;
-} */
-
 /* WRAPPER */
 
 .background-cover{
@@ -172,11 +71,24 @@ and (orientation: portrait){
     font-size: 40px;
 }
 
-.content-container{
+.recipes-container-header{
+    display: inline-block;
     margin-bottom: 20px;
     padding: 0px 15px;
+}
+
+.content-container-header-title{    
+    display: inline-block;
     font-size: 34px;
     line-height: 34px;
+}
+
+.content-container-header-more{
+    padding-top: 14px;
+    text-decoration: none;
+    float: right;
+    font-weight: 500;
+    color: orangered;
 }
 
 .content-container h2{
@@ -205,7 +117,7 @@ and (orientation: portrait){
  
 }
 
-.content-card-image-container:hover .content-card-image{
+.content-card:hover .content-card-image{
     transform: scale(1.2)
 }
 
@@ -213,7 +125,7 @@ and (orientation: portrait){
     position: relative;
     z-index: 0;
     margin: 0;
-    padding: 8px 5px 0 5px;    
+    padding: 8px 5px 20px 5px;    
     font-size: 20px;
     line-height: 25px;
     text-decoration: none;
@@ -222,6 +134,10 @@ and (orientation: portrait){
     font-family: "Open Sans",Arial;
     color: #2d2d2d;
     min-height: 74px;
+}
+
+.content-card-title:hover .content-card-title-link{
+    color: lightgrey;
 }
 
 .content-card-title--recipe{
