--- a/src/app/recipes/recipes.component.html
+++ b/src/app/recipes/recipes.component.html
@@ -1,3 +1,34 @@
-<p>
-  recipes works!
-</p>
+<blog-navbar></blog-navbar>
+<section class="container-fluid py-5">
+  <div class="container recipe-container" style="padding: 0; border-bottom: 2px solid #f2f2f2;">
+    <div class="row recipe-content pt-5" style="padding: 0;">      
+      <div *ngFor="let recipe of recipes" class="col-6 col-sm-6 col-md-3 pb-5 px-2 content-container-card">
+        <div class="content-card m-1">
+          <div class="content-card-image-container">
+            <div [routerLink]="['/recipe', recipe._id]" class="content-card-image" [style.background-image]="'url(' + recipe?.images[0]?.source + ')'">
+              <a  style="height: 100%; width: 100%; "></a>
+            </div>
+          </div>
+          <div class="content-card-title content-card-title--recipe p-2">
+            <a class="content-card-title-link" [routerLink]="['/recipe', recipe._id]">{{recipe.name}}</a>
+          </div>
+          <div class="row m-0 text-center content-card-data" style="border-top: 1px solid #e0e0e0;">
+            <div class="time col-4 p-1" style="border-right: 1px solid #e0e0e0">
+              <div><strong>tijd</strong></div>
+              <div>{{recipe.time_spend.totalTime}}</div>
+            </div>
+            <div class="healthy col-4 p-1" style="border-right: 1px solid #e0e0e0">
+              <div><strong>Gezond</strong></div>
+              <div>{{recipe.health_index}}</div>
+            </div>
+            <div class="difficutly col-4 p-1">
+              <div><strong>moeilijkheid</strong></div>
+              <div>{{recipe.difficulty_index}}</div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<blog-footer></blog-footer>
